@@ -42,6 +42,7 @@ load "operserv/global";           # GLOBAL: Send a global notice to all connecte
 load "operserv/help";             # HELP: Provides help with OperServ commands.
 load "operserv/modload";          # MODLOAD: Load a module.
 load "operserv/modunload";        # MODUNLOAD: Unload a module.
+load "operserv/restart"           # RESTART: Save services and identified user data to disk and restart services.
 load "operserv/shutdown";         # SHUTDOWN: Save services data to disk and shutdown services.
 load "operserv/update";           # UPDATE: Save services data to disk.
 load "operserv/uptime";           # UPTIME: Display services uptime.
