@@ -12,6 +12,7 @@ sub init_ns_main {
 	hook_kill_add(\&ircd_ns_kill);
 	hook_kick_add(\&ircd_ns_kick);
 	hook_nick_add(\&ircd_ns_nick);
+	if (-e "$Chakora::ROOT_SRC/../etc/idrecover.db") { hook_eos_add(\&ircd_ns_restart); }
 	if (!$Chakora::synced) { hook_pds_add(\&ircd_ns_main); }
 	else { ircd_ns_main(); }
 }
@@ -22,11 +23,13 @@ sub void_ns_main {
 	delete_sub 'ircd_ns_kill';
 	delete_sub 'ircd_ns_kick';
 	delete_sub 'ircd_ns_nick';
+	delete_sub 'ircd_ns_restart';
 	hook_pds_del(\&svs_ns_main);
 	serv_del('NickServ');
 	hook_kill_del(\&ircd_ns_kill);
 	hook_kick_del(\&ircd_ns_kick);
 	hook_nick_del(\&ircd_ns_nick);
+	hook_eos_del(\&ircd_ns_restart);
 	delete_cmdtree("nickserv");
 	delete_sub 'void_ns_main';
 }
@@ -103,6 +106,32 @@ sub ircd_ns_nick {
 	my ($user, $newnick) = @_;
 	if (is_identified($user)) {
 		metadata_add(1, uidInfo($user, 9), "data:realhost", $newnick."!".uidInfo($user,2)."@".uidInfo($user,3)." ".uidInfo($user,5));
+	}
+}
+
+sub ircd_ns_restart {
+	if (-e "$Chakora::ROOT_SRC/../etc/idrecover.db") {
+		open FILE, "<$Chakora::ROOT_SRC/../etc/idrecover.db" or return;
+		my @lines = <FILE>;
+		close FILE;
+		`rm $Chakora::ROOT_SRC/../etc/idrecover.db`;
+		
+		foreach my $line (@lines) {
+			my @rex = split(' ', $line);
+			
+			if (defined $Chakora::uid{$rex[0]}) {
+				if ($Chakora::uid{$rex[0]}{'nick'} eq $rex[1] and
+					$Chakora::uid{$rex[0]}{'user'} eq $rex[2] and
+					$Chakora::uid{$rex[0]}{'host'} eq $rex[3] and
+					$Chakora::uid{$rex[0]}{'ip'} eq $rex[4] and
+					$Chakora::uid{$rex[0]}{'server'} eq $rex[5]) {
+						serv_notice("nickserv", $rex[0], "Automatically re-identifying you to your account.");
+						serv_accountname($rex[0], $rex[6]);
+						$Chakora::uid{$rex[0]}{'account'} = $rex[6];
+						event_identify($rex[0], uidInfo($rex[0], 9));
+				}
+			}
+		}
 	}
 }
 
